--- a/src/global.css
+++ b/src/global.css
@@ -54,6 +54,7 @@ input, button{
 }
 
 .button{
+  cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -62,7 +63,7 @@ input, button{
 .button[uxp-variant="action"]{
   width: 24px;
   border-radius: 50%;
-  background: #1473E6;
+  background: #378EF0;
 }
 .button[uxp-variant="action"] svg path{
   fill: #fff;
@@ -73,15 +74,15 @@ input, button{
   width: 100%;
   height: 28px;
   line-height: 28px;
-  font-weight: 600;
+  font-weight: 500;
   font-size: 13px;
-  background: #1473E6;
+  background: #378EF0;
   color: #fff;
   border-radius: 14px;
   margin: 0;
 }
 .button[uxp-variant="cta"].large{
-  font-size: 15px;
+  font-size: 14px;
   height: 36px;
   line-height: 18px;
   border-radius: 20px;
@@ -93,7 +94,7 @@ input, button{
   background: white;
 }
 .bg-blue{
-  background-color: #1473E6;
+  background-color: #378EF0;
 }
 .bg-black{
   background: black;
@@ -117,7 +118,7 @@ input, button{
   background: #888;
 }
 .text-blue{
-  color: #1473E6;
+  color: #378EF0;
 }
 .text-white{
   color: white;
@@ -144,7 +145,7 @@ input, button{
   line-height: 1.5;
 }
 .text-md{
-  font-size: 0.85rem;
+  font-size: 0.7rem;
   line-height: 1.5;
 }
 .text-lg{
@@ -514,7 +515,7 @@ input, button{
   border-color: transparent;
 }
 .border-blue{
-  border-color: #1473E6;
+  border-color: #378EF0;
 }
 .border-black{
   border-color: black;
@@ -587,6 +588,9 @@ input, button{
 }
 .cursor-pointer{
   cursor: pointer;
+}
+.pointer-events-none{
+  pointer-events: none;
 }
 
 hr{
